--- a/Snake.vcxproj.filters
+++ b/Snake.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="Assets\Grid\Grid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Assets\Scenes\Scene\SnakeScene\SnakeScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Assets\Scenes\Scene\ReplayGameScene\lostScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assets\Snake\snake.h">
@@ -41,5 +47,20 @@
     <ClInclude Include="Assets\Grid\Grid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Assets\Scenes\SceneManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Assets\Scenes\Scene\Scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Assets\Scenes\Scene\SnakeScene\SnakeScene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Assets\Scenes\Scene\ReplayGameScene\lostScene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="arial_narrow_7.ttf" />
   </ItemGroup>
 </Project>
